@@ -1,3 +1,7 @@
+2005-10-15 Perry
+ PATCH: [ 1326813 ] Fix binary detection to allow archives
+  Src: DirView.cpp
+
 2005-10-13 Kimmo
  PATCH: [ 1305541 ] Rational ClearCase support
   Submitted by Greg (rys1908)
